# management-system-python

./: README.md  main.py  pyproject.toml  utils.py
services/: __init__.py
services/img_to_pdf/: __init__.py  img_to_pdf.py
services/merge_pdf/: __init__.py  merge_pdf.py
services/pdf_to_docx/: __init__.py  pdf_to_docx.py
services/xlsx_sheet_to_docx_table/: __init__.py  xlsx_sheet_to_docx_table.py
services/xlsx_to_docx/: __init__.py  xlsx_to_docx.py
services/xlsx_to_pdf/: __init__.py  xlsx_to_pdf.py
